// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`resetPassword -- POST / do not send a resetPassword (sendEmail failed) 1`] = `
Object {
  "body": Object {
    "error": "api.resetPassword sendMail failed",
  },
  "status": 400,
}
`;

exports[`resetPassword -- POST / do not send a resetPassword (sendEmail failed) 2`] = `
Array [
  TextRow {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "f94b937b40c946b916c63a1b638ee956",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`resetPassword -- POST / do not send a resetPassword (sendEmail failed) 3`] = `Array []`;

exports[`resetPassword -- POST / do not send a resetPassword (user does not exist) 1`] = `
Object {
  "body": Object {
    "error": "api.resetPassword user does_not_exist",
  },
  "status": 400,
}
`;

exports[`resetPassword -- POST / do not send a resetPassword (user does not exist) 2`] = `Array []`;

exports[`resetPassword -- POST / do not send a resetPassword (user does not exist) 3`] = `Array []`;

exports[`resetPassword -- POST / do send a resetPassword 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`resetPassword -- POST / do send a resetPassword 2`] = `
Array [
  TextRow {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "f94b937b40c946b916c63a1b638ee956",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`resetPassword -- POST / do send a resetPassword 3`] = `
Array [
  TextRow {
    "creation_date": 1000000000000,
    "id": 1,
    "token": "0000000000000000000000000000000000000001",
    "user_id": 1,
  },
]
`;

exports[`resetPassword -- POST /:tokenId do not reset password (token does not exist) 1`] = `
Object {
  "body": Object {
    "error": "api.resetPassword token does_not_exist",
  },
  "status": 400,
}
`;

exports[`resetPassword -- POST /:tokenId do not reset password (token does not exist) 2`] = `
Array [
  TextRow {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "f94b937b40c946b916c63a1b638ee956",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`resetPassword -- POST /:tokenId do not reset password (token does not exist) 3`] = `Array []`;

exports[`resetPassword -- POST /:tokenId do not reset password (user does not exist) 1`] = `
Object {
  "body": Object {
    "error": "api.resetPassword token does_not_exist",
  },
  "status": 400,
}
`;

exports[`resetPassword -- POST /:tokenId do not reset password (user does not exist) 2`] = `Array []`;

exports[`resetPassword -- POST /:tokenId do not reset password (user does not exist) 3`] = `Array []`;

exports[`resetPassword -- POST /:tokenId do reset password 1`] = `
Object {
  "body": Object {},
  "status": 204,
}
`;

exports[`resetPassword -- POST /:tokenId do reset password 2`] = `
Array [
  TextRow {
    "bio": null,
    "completed": 0,
    "email": "test@test.test",
    "firstname": "theo",
    "gender_id": null,
    "id": 1,
    "lastname": "test",
    "nickname": "thescriv",
    "orientation_id": 1,
    "password": "5f4dcc3b5aa765d61d8327deb882cf99",
    "score": 100,
    "verified": 0,
  },
]
`;

exports[`resetPassword -- POST /:tokenId do reset password 3`] = `
Array [
  TextRow {
    "creation_date": 1000000000000,
    "id": 1,
    "token": "0000000000000000000000000000000000000001",
    "user_id": 1,
  },
]
`;
